<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/input_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/money"
        android:inputType="number"/>
    <EditText
        android:id="@+id/input_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/info" />
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okey" />
    <CheckBox
        android:id="@+id/bank_card_chk_bx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card"/>
    <CheckBox
        android:id="@+id/mobile_phone_chk_bx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"/>
    <CheckBox
        android:id="@+id/cash_address_chk_bx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cash"/>
</LinearLayout>
